# on-train-llm-agents-rag

./: README.md  pyproject.toml
data/: annuaire.txt  faq.md  resumes.txt  sales.csv
llm_agents/: a_langchain_runnable.py  a_langchain_structured_output.py  a_langchain_your_first_chain.py  b_agent_from_scratch.py  b_agent_react.py  c_langgraph.py  d_ragas.py
rag/: a_embeddings.py  b_retrieval_parent_document.py  b_retrieval_self_querying.py  c_chunking_recursive.py  c_chunking_semantic.py  d_crag.ipynb  d_crag.py
